:wrench: Update the mouse swuper to use mouse events instead of pointer and fix swiping on mobile with touch-action

--- a/components/Sections/FeaturedTreatments/FeaturedTreatmentsSlider.module.scss
+++ b/components/Sections/FeaturedTreatments/FeaturedTreatmentsSlider.module.scss
@@ -13,6 +13,7 @@
   flex-wrap: nowrap;
   flex-basis: 100%;
   transition: transform 0.3s ease-in-out;
+  touch-action: none;
 }
 
 .slide {
